src/objects/NO_Insurance_LTT__c.object
<CustomObject>
    <fields>
        <fullName>Age_Next_Bday__c</fullName>
        <label>Age Next Bday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Females_Non_Smoker__c</fullName>
        <label>Females Non Smoker</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Females_Smoker__c</fullName>
        <label>Females Smoker</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Males_Non_Smoker__c</fullName>
        <label>Males Non Smoker</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Males_Smoker__c</fullName>
        <label>Males Smoker</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>NO Insurance LTT</label>
    <nameField>
        <label>NO Inssurance LTT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NO Insurance LTTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>